force-app/main/default/objects/Order_Item__c/Order_Item__c.object-meta.xml
<CustomObject>
    <description>The Order Item object represents a single line item within a customer order. As a child of Order, it captures the product name, quantity, and unit price for each item ordered. Commonly used for order details and itemized billing.</description>
    <label>Order Item</label>
    <nameField>
        <label>Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>