force-app/main/default/objects/Order_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Formula field calculating the line total (Quantity multiplied by Price) for this Order Item. Used by the Apex OrderItemTrigger to recalculate Order__c.Total_Amount__c after any Order Item insert, update, delete, or undelete.</description>
    <formula>Quantity__c * Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as Quantity times Price. Do not edit directly.</inlineHelpText>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>