force-app/main/default/objects/Order_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>MasterDetail</type>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <description>Master-Detail relationship to the parent Order. An Order Item cannot exist without an Order.</description>
</CustomField>