force-app/main/default/objects/Order_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>The unit price of this menu item at the time the order was placed. Captured independently of the Menu Item price to preserve historical order accuracy.</description>
    <label>Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>