force-app/main/default/objects/Order_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>The name of the food or beverage item ordered, captured at the time of ordering to preserve the order record independently of menu changes.</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>